# HyperAugment

./: CMakeLists.txt  README.md  dev-comments.txt
include/: Canvas.h  Label.h
prototypes/config_test/: maintest
prototypes/config_test/data/inputs/test_dataset/: dataset_config.yeet
prototypes/config_test/include/: Dataset.h
prototypes/config_test/src/: Dataset.cpp  main.cpp
prototypes/readFile-test/: config.txt  test.cpp
src/: CMakeLists.txt  Canvas.cpp  Canvas.h  Dataset.cpp  Label.cpp  MainTest.cpp  Ooi.cpp  Ooi.h  main.cpp
test-code/: .hsvTest.cpp.swp  CMakeCache.txt  DisplayImage  Makefile  cmake_install.cmake  cv_test2.cpp  cv_test3.cpp  hsv  maintest  test2Affine  test3IsTheBest  test4  test5w
unit-tests/masks-test/: test.cpp
unit-tests/replace-test/: test.cpp
unit-tests/roi-test/: test.cpp
unit-tests/xml-test/: bck.xml  test.cpp
